src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_24.deca
// Description:
//    regle 3.24, return type void
//
// Resultats:
//    Ligne 8: Cannot use 'return' in void method.
class A {
    void f(int x) {
        return x;
    }
}